--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -401,9 +401,8 @@ header{
 
 .showcase{
     background-color: #F0EFE9;
-    background-image: url(/IMG/Stripes/Rectangle\ 607\ \(1\).png);
-    background-repeat: no-repeat;
-    background-position: -5% 100%;
+    position: relative;
+    
     
     
     .container{
@@ -473,10 +472,11 @@ header{
         
     }
 
-    .stripe-part1{
+    .position-holder{
         position: absolute;
-        top: 69%;
+        top: 70%;
         right: 47%;
+        pointer-events: none;
     }
 }
 
@@ -715,9 +715,7 @@ header{
     align-content: center;
     background-color: #F0EFE9;
     position: relative;
-    background-image: url(/IMG/Stripes/Rectangle\ 607.png);
-    background-repeat: no-repeat;
-    background-position: 100% 100%;
+
     
     .container{
         
@@ -821,7 +819,8 @@ header{
     .stripes-right{
         position: absolute;
         top: 73%;
-        left: 40%;
+        left: 50%;
+        pointer-events: none;
     }    
 
 }
@@ -1163,7 +1162,7 @@ header{
    .white-box{
     background-color: white;
     padding: 60px;
-    width: 90%;
+    max-width: 90%;
     margin-bottom: 55px;
     
     
@@ -1196,7 +1195,7 @@ header{
         .testimonials-stack{
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
-            gap: 94px;
+            gap: 85px;
             
     
             .testimonials-column{
@@ -1529,6 +1528,7 @@ header{
                     padding: 10px 24px;
                     border-radius: 20px;
                     border: 1px solid white;
+                    outline: none;
                     
                     
                     
@@ -1555,9 +1555,7 @@ header{
     background-color: #0E1021;
     padding: 100px;
     position: relative;
-    background-image: url(/IMG/Stripes/Rectangle\ 116\ \(3\).png);
-    background-repeat: no-repeat;
-    background-position: 100% 100%;
+   
     
     
     .container{
@@ -1653,6 +1651,12 @@ header{
               
 
     }
+    .last-line-part{
+        position: absolute;
+        left: 67%;
+        top: 79%;
+        pointer-events: none;
+    }
     
 }
 
@@ -1660,6 +1664,7 @@ header{
     background-color: #0E1021;
     padding: 30px;
     border-top: 1px solid white;
+    
     
 
     .container{
@@ -1708,6 +1713,7 @@ header{
             }
         }
     }
+    
 }
 
 
