--- a/CSS/style.css
+++ b/CSS/style.css
@@ -398,6 +398,13 @@ header .container .btn-login {
   padding-top: 72px;
   padding-bottom: 80px;
 }
+@media (max-width: 992px) {
+  .company-showcase .container .clients {
+    display: grid;
+    grid-template-columns: 0.5fr 0.5fr auto;
+    gap: 50px;
+  }
+}
 
 .company-features .container {
   display: flex;
@@ -406,6 +413,13 @@ header .container .btn-login {
   padding-bottom: 80px;
   border: 2px solid RGBA(25, 25, 25, 0.2);
 }
+@media (max-width: 992px) {
+  .company-features .container {
+    display: flex;
+    align-items: center;
+    padding: 0;
+  }
+}
 .company-features .container .features {
   padding-right: 100px;
   padding-left: 50px;
@@ -413,6 +427,12 @@ header .container .btn-login {
   flex-direction: column;
   align-items: start;
   max-width: 50%;
+}
+@media (max-width: 992px) {
+  .company-features .container .features {
+    display: block;
+    padding-right: 10px;
+  }
 }
 .company-features .container .features p {
   font-family: "Inter";
@@ -429,6 +449,12 @@ header .container .btn-login {
   font-style: normal;
   color: #191919;
 }
+@media (max-width: 992px) {
+  .company-features .container .features h3 {
+    margin-bottom: 40px;
+    font-size: 28px;
+  }
+}
 .company-features .container .features a {
   text-align: center;
   font-size: 16px;
@@ -438,10 +464,24 @@ header .container .btn-login {
 .company-features .container .company-features-icons {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  padding-left: 10px;
+}
+@media (max-width: 992px) {
+  .company-features .container .company-features-icons {
+    gap: 20px;
+    margin: 10px;
+    grid-template-columns: 2fr;
+  }
 }
 .company-features .container .company-features-icons .iconStack i {
   width: 40px;
   height: 40px;
+}
+@media (max-width: 992px) {
+  .company-features .container .company-features-icons .iconStack i {
+    width: 100%;
+    height: auto;
+  }
 }
 .company-features .container .company-features-icons .iconStack p {
   font-family: "Inter";
@@ -458,11 +498,22 @@ header .container .btn-login {
   justify-content: center;
   position: relative;
 }
+@media (max-width: 992px) {
+  .aboutCompany .container {
+    display: block;
+  }
+}
 .aboutCompany .container .woman {
-  width: 533px;
-  height: 615px;
+  width: 100%;
+  height: auto;
   margin-left: 50px;
   margin-right: 170px;
+}
+@media (max-width: 992px) {
+  .aboutCompany .container .woman {
+    margin-left: 0;
+    width: 50%;
+  }
 }
 .aboutCompany .container .stripes-woman {
   position: absolute;
@@ -470,6 +521,17 @@ header .container .btn-login {
   height: 50%;
   left: 27px;
   top: 160px;
+}
+@media (max-width: 992px) {
+  .aboutCompany .container .stripes-woman {
+    left: 0;
+  }
+}
+@media (max-width: 992px) {
+  .aboutCompany .container .stripes-woman img {
+    width: 25%;
+    left: 0;
+  }
 }
 .aboutCompany .container .text-box-blue {
   position: absolute;
@@ -479,6 +541,13 @@ header .container .btn-login {
   left: -2%;
   height: 180px;
   width: 400px;
+}
+@media (max-width: 992px) {
+  .aboutCompany .container .text-box-blue {
+    display: block;
+    top: 29%;
+    left: 30%;
+  }
 }
 .aboutCompany .container .text-box-blue h4 {
   font-size: 20px;
@@ -509,6 +578,11 @@ header .container .btn-login {
   font-weight: 500;
   font-style: normal;
   color: #f94d1c;
+}
+@media (max-width: 992px) {
+  .aboutCompany .container .aboutCompanyContent h4 {
+    margin-top: 30px;
+  }
 }
 .aboutCompany .container .aboutCompanyContent h3 {
   font-family: "DM Sans";
@@ -580,6 +654,11 @@ header .container .btn-login {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 25px;
   padding-bottom: 48px;
+}
+@media (max-width: 992px) {
+  .companyServices .container .stacks-showcase {
+    grid-template-rows: 1fr;
+  }
 }
 .companyServices .container .stacks-showcase .squares-button {
   background-color: #ffffff;
@@ -859,7 +938,7 @@ header .container .btn-login {
 .testimonials .white-box {
   background-color: white;
   padding: 60px;
-  max-width: 90%;
+  max-width: 100%;
   margin-bottom: 55px;
 }
 .testimonials .white-box .container .topTest {
@@ -1073,9 +1152,12 @@ header .container .btn-login {
 }
 .bottom-section1 .container {
   display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
 }
 .bottom-section1 .container .picture-text-div {
-  margin-right: 95px;
+  width: 35%;
+  margin-right: 10%;
 }
 .bottom-section1 .container .picture-text-div img {
   margin-bottom: 28px;
@@ -1087,22 +1169,21 @@ header .container .btn-login {
   font-style: normal;
   text-align: left;
   color: rgba(255, 255, 255, 0.7);
-  max-width: 100%; /* Adjust this as needed */
-  height: auto; /* Maintain aspect ratio */
 }
 .bottom-section1 .container .rightPartsec {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 35px;
-  margin-top: 20px;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: 100%;
+  height: auto;
+  gap: 25px;
+  margin-top: 25px;
 }
-.bottom-section1 .container .rightPartsec .secDiv {
-  width: -moz-max-content;
-  width: max-content;
+.bottom-section1 .container .rightPartsec .divStack {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
-.bottom-section1 .container .rightPartsec .secDiv .bottom-h4 h4 {
+.bottom-section1 .container .rightPartsec .divStack h4 {
   font-family: "DM Sans";
   font-size: 22px;
   font-weight: bold;
@@ -1111,12 +1192,7 @@ header .container .btn-login {
   color: #ffffff;
   margin-bottom: 28px;
 }
-.bottom-section1 .container .rightPartsec .secDiv .divStack {
-  display: flex;
-  flex-direction: column;
-  margin-right: 10px;
-}
-.bottom-section1 .container .rightPartsec .secDiv .divStack a {
+.bottom-section1 .container .rightPartsec .divStack a {
   font-family: "Inter";
   font-size: 16px;
   font-weight: 500;
