--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -487,9 +487,22 @@ header{
             align-items: center;
             gap: 100px;
             padding-top: 72px;
-            padding-bottom: 80px;     
+            padding-bottom: 80px;
+
+            @media (max-width: 992px){
+                display: grid;
+                grid-template-columns: 0.5fr 0.5fr auto;
+                gap: 50px;
+                 
+            } 
+            
+               
 
         }
+
+        
+
+         
     }
 }
 
@@ -501,7 +514,20 @@ header{
         align-items: start;
         padding-top: 80px;
         padding-bottom: 80px;
-        border: 2px solid RGBA(25,25,25,0.2 );        
+        border: 2px solid RGBA(25,25,25,0.2 ); 
+
+        @media (max-width: 992px){
+            display: flex;
+            align-items: center;
+            padding: 0;
+            
+            
+            
+            
+            
+        }
+        
+        
         
         .features{
             padding-right: 100px;
@@ -510,6 +536,17 @@ header{
             flex-direction: column;
             align-items: start;
             max-width: 50%;
+
+            @media (max-width: 992px){
+                display: block;
+                padding-right: 10px;
+
+                
+                
+                
+                
+                
+            } 
             
         
             
@@ -522,6 +559,7 @@ header{
                 color: #f94d1c;
                 margin-bottom: 0px;
 
+
             }
 
             h3{
@@ -530,6 +568,17 @@ header{
                 font-weight: bold;
                 font-style: normal;
                 color: #191919;
+                
+                @media (max-width: 992px){
+                    margin-bottom: 40px;
+                    font-size: 28px;
+                    
+                    
+                    
+                    
+                } 
+                
+                
 
             }
 
@@ -546,12 +595,26 @@ header{
         .company-features-icons{
             display: grid;
             grid-template-columns: 1fr 1fr;
+            padding-left: 10px;
+            
+            @media (max-width: 992px){
+                 gap: 20px;
+                 margin: 10px;
+                 grid-template-columns: 2fr;
+                             
+            }
             
 
             .iconStack{
                 i{
                     width: 40px;
                     height: 40px;
+
+                    @media (max-width: 992px){
+                        width: 100%;
+                        height: auto;
+                                    
+                   }
 
                 }
 
@@ -581,11 +644,25 @@ header{
         justify-content: center;
         position: relative;
 
+        @media (max-width: 992px){
+            display: block;
+            
+            
+            
+        } 
+
         .woman{
-            width: 533px;
-            height: 615px;
+            width: 100%;
+            height: auto;
             margin-left: 50px;
             margin-right: 170px;
+
+            @media (max-width: 992px){
+                margin-left: 0;
+                width: 50%;
+                
+                
+            } 
         }
 
         .stripes-woman{
@@ -594,6 +671,25 @@ header{
             height: 50%;
             left: 27px;
             top: 160px;
+
+            @media (max-width: 992px){
+                left: 0;
+                
+                
+            } 
+
+            img{
+                @media (max-width: 992px){
+                    width: 25%;
+                    left: 0;
+                    
+                    
+                } 
+            }
+            
+            
+           
+            
         }
 
         .text-box-blue{
@@ -605,6 +701,18 @@ header{
             height: 180px;
             width: 400px;
 
+            @media (max-width: 992px){
+                display: block;
+                top: 29%;
+                left: 30%;
+                
+
+                
+                
+            } 
+
+            
+
             h4{
                 font-size: 20px;
                 font-weight: bold;
@@ -612,6 +720,7 @@ header{
                 text-align: left;
                 margin-top: 27px;
                 margin-left: 18px;
+
                 
 
 
@@ -644,6 +753,14 @@ header{
                 font-weight: 500;
                 font-style: normal;
                 color: #f94d1c;
+                
+                @media (max-width: 992px){
+                margin-top: 30px;    
+                    
+    
+                    
+                    
+                }
 
             }
 
@@ -654,6 +771,8 @@ header{
                 font-style: normal;
                 color: #191919;
                 margin-bottom: 37px;
+
+                
 
             }
 
@@ -749,6 +868,11 @@ header{
             grid-template-columns: 1fr 1fr 1fr 1fr;
             gap: 25px;
             padding-bottom: 48px;
+
+            @media (max-width: 992px){
+                grid-template-rows: 1fr;
+                            
+           }
             
 
             .squares-button{
@@ -816,6 +940,7 @@ header{
         
 
     }   
+
     .stripes-right{
         position: absolute;
         top: 73%;
@@ -1162,7 +1287,7 @@ header{
    .white-box{
     background-color: white;
     padding: 60px;
-    max-width: 90%;
+    max-width: 100%;
     margin-bottom: 55px;
     
     
@@ -1560,15 +1685,15 @@ header{
     
     .container{
         display: flex;
+        justify-content: space-between;
+        margin-top: 20px;
+        
         
         
         
         .picture-text-div{
-            margin-right: 95px;
-            
-            
-            
-            
+            width: 35%;
+            margin-right: 10%;
 
             img{
                 margin-bottom: 28px;
@@ -1584,8 +1709,7 @@ header{
                 font-style: normal;
                 text-align: left;
                 color: rgba(255,255,255,0.7 );
-                max-width: 100%; /* Adjust this as needed */
-                height: auto; /* Maintain aspect ratio */
+                
 
             }
         }
@@ -1593,17 +1717,24 @@ header{
         .rightPartsec{
             display: grid;
             grid-template-columns: 1fr 1fr 1fr 1fr;
-            gap: 35px;
-            margin-top: 20px;
-            width: fit-content;
+            width: 100%;
+            height: auto;
+            gap: 25px;
+            margin-top: 25px;
             
-        
-            .secDiv{
-                width: max-content;
-                
-                
-                
-                .bottom-h4{
+
+            
+            
+            
+            
+
+                .divStack{
+                    display: flex;
+                    flex-direction: column;
+                    
+                    width: 100%;
+                    
+                    
                     h4{
                         font-family: "DM Sans";
                         font-size: 22px;
@@ -1614,43 +1745,37 @@ header{
                         margin-bottom: 28px;
                         ///tanke på innehållet, ena boxen tar inte upp lika mycket plats
                     }
-
-                }
-
-                .divStack{
-                    display: flex;
-                    flex-direction: column;
-                    margin-right: 10px;
                     
                     
-                    
+                    a{
+                        font-family: "Inter";
+                        font-size: 16px;
+                        font-weight: 500;
+                        font-style: normal;
+                        text-align: left;
+                        color: rgba(255,255,255,0.7 );
+                        margin-bottom: 20px;
+                        
+                    }
                     
                     
 
                         
                         
                         
-                        a{
-                            font-family: "Inter";
-                            font-size: 16px;
-                            font-weight: 500;
-                            font-style: normal;
-                            text-align: left;
-                            color: rgba(255,255,255,0.7 );
-                            margin-bottom: 20px;
-                            
-                        }
+                    
                     
                     
 
                 }
-            }
+            
             
 
         }
               
 
     }
+
     .last-line-part{
         position: absolute;
         left: 67%;
