--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -491,8 +491,9 @@ header{
 
             @media (max-width: 992px){
                 display: grid;
-                grid-template-columns: 0.5fr 0.5fr auto;
-                gap: 50px;
+                grid-template-columns: 1fr 1fr 1fr;
+                
+                
                  
             } 
             
@@ -849,6 +850,11 @@ header{
             line-height: 22px;
             font-style: normal;
             color: #f94d1c;
+            @media (max-width: 992px){
+                grid-template-columns: 1fr 1fr;
+                text-align: center;
+                            
+           }
 
         }
 
@@ -861,6 +867,12 @@ header{
             color: #191919;
             padding-bottom: 48px;
 
+            @media (max-width: 992px){
+                grid-template-columns: 1fr 1fr;
+                text-align: center;
+                            
+           }
+
         }
 
         .stacks-showcase{
@@ -870,7 +882,7 @@ header{
             padding-bottom: 48px;
 
             @media (max-width: 992px){
-                grid-template-rows: 1fr;
+                grid-template-columns: 1fr 1fr;
                             
            }
             
@@ -951,12 +963,23 @@ header{
 }
 
 .whyChooseUs{
+
+    
     
     .container{
         display: flex;
         margin-top: 43px;
-        width: 1620px;
-        height: 630.3px;
+        width: 100%;
+        height: auto;
+
+        @media (max-width: 992px){
+            flex-direction: column;
+            align-items: flex-start;
+            
+                         
+        }
+
+        
         
         .leftSection{
            
@@ -980,6 +1003,13 @@ header{
                 color: #191919;
                 margin-bottom: 43px;
 
+                @media (max-width: 992px){
+                    font-size: 30px;
+                                 
+                }
+
+                
+
             }
 
             .stackIconArg{
@@ -987,6 +1017,16 @@ header{
                 align-items: start;
                 justify-content: start;
                 margin-bottom: 25px;
+
+                
+
+            
+                
+
+
+                
+                
+                
                 
                 
                 img{
@@ -998,6 +1038,8 @@ header{
                 
 
                 .textStack{
+
+                    
                     
                     
 
@@ -1010,6 +1052,8 @@ header{
                         text-align: left;
                         color: #191919;
 
+                        
+
                     }
 
                     p{
@@ -1021,33 +1065,53 @@ header{
                         text-align: left;
                         letter-spacing: -10px;
                         color: rgba(25,25,25,0.7 );
+
+                        
                         
 
                     }
+
+                    
                 }
             }
 
         }
 
         .rightSection{
-        width: 1057px;
-        height: 584px;
+        width: 100%;
+        height: auto;
         
         position: relative;
         display: flex;
         justify-content: space-between;
         align-items: start;
+
+        @media (max-width: 992px){
+            width: 75%;
+            height: auto;
+                         
+        }
+
+        
         
             
 
             img{
                 
-                margin-bottom: 98px;
+               
                 position: absolute;
-                left: 110px; /* Adjust the left property to move the image to the right */
+                left: 10%; /* Adjust the left property to move the image to the right */
                 top: 3%;
-                width: 84%;
-                height: 80%;
+                width: 90%;
+                height: auto;
+
+                @media (max-width: 992px){
+                    width: 55%;
+                    position: static;
+                    padding-left: 40px;
+                    margin-bottom: 40px;
+                                 
+                }
                 
             }
 
@@ -1055,10 +1119,16 @@ header{
                 position: absolute;
                 top: 32%;
                 background-color: #F0EFE9;
-                z-index: -1; /* Set a negative z-index to place it behind the image */  
-                overflow: visible;
+                z-index: -1; /* Set a negative z-index to place it behind the image */ 
                 width: 884px;
                 height: 398px;
+
+                @media (max-width: 992px){
+                    width: 442px;
+                    height: 197px;
+                    top: 16%;
+                                
+               }
                 
                 
             }
@@ -1103,12 +1173,20 @@ header{
         .global-projects-box{
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 25px;
+            gap: 30px;
             margin-bottom: 20px;
+
+            @media (max-width: 992px){
+                display: grid;
+                grid-template-columns: 1fr;
+                
+                             
+            }
             
             .box-container{
                 img{
                     width: 100%;
+                    height: auto;
                     margin-bottom: 30px;
                 }
 
@@ -1116,7 +1194,6 @@ header{
                     font-family: "DM Sans";
                     font-size: 18px;
                     font-weight: bold;
-                    line-height: 33px;
                     font-style: normal;
                     text-align: left;
                     color: #191919;
@@ -1195,6 +1272,12 @@ header{
             align-items: center;
             justify-content: space-between;
             margin-bottom: 85px;
+
+            @media (max-width: 992px){
+                margin-bottom: 60px;
+                
+                             
+            }
         
           
            
@@ -1230,19 +1313,23 @@ header{
        }
 
        .team-showcase{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
         gap: 30px;
+
+        @media (max-width: 992px){
+            grid-template-columns: 2fr 2fr;
+            
+                         
+        }
            
            .employee-box{
             
             
+            
             .IMGSHOW{
-                
-                width: 254px;
-                height: 320px;
+                width: 100%;
+                height: auto;
                 margin-bottom: 28px;
             
 
