--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1085,10 +1085,25 @@ header .container .btn-login {
   justify-content: space-between;
   margin-bottom: 30px;
 }
+@media (max-width: 992px) {
+  .articles-news .container .top-art-head {
+    display: block;
+  }
+}
+@media (max-width: 992px) {
+  .articles-news .container .top-art-head h3 {
+    margin-bottom: 30px;
+  }
+}
 .articles-news .container .article-showcase {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 30px;
+}
+@media (max-width: 992px) {
+  .articles-news .container .article-showcase {
+    grid-template-columns: 1fr;
+  }
 }
 .articles-news .container .article-showcase .article-stack {
   position: relative;
